fix_Quest_1